2003-02-23  Bradley Bell <btb@icculus.org>

	* arch/sdl/digi.c: fix crash on non-existent sounds
	(i.e. shareware data)

2003-02-22  Bradley Bell <btb@icculus.org>

	* main/titles.c: fixed fullscreen toggle in briefings

2003-02-21  Bradley Bell <btb@icculus.org>

	* configure.ac: check for mingw when enabling nasm
	* main/playsave.c: enable loading player files of either byte
	order

2003-02-20  Bradley Bell <btb@icculus.org>

	* main/bm.c, main/bm.h, main/endlevel.c: fixed up endlevel stuff
	* arch/sdl/digi.c, main/kludge.c: oops, meant to say: fixed bug
	#343, not "rest of solution to bug #344"
	* arch/sdl/timer.c, include/timer.h: revert to more accurate
	timers
	* main/kludge.c: partial solution to bug #344
	* Makefile.am, tools/cvs2cl/cvs2cl.pl: get rid of cvs2cl.pl
	* compilerdefs.txt: added linux/mips info
	* ChangeLog: clean up changelog

2003-02-19  Bradley Bell <btb@icculus.org>

	* libmve/mveplay.c: os x needs nanosleep prototype.

2003-02-18  Bradley Bell <btb@icculus.org>

	* .cvsignore, libmve/.cvsignore: added files to .cvsignore
	* include/libmve.h, libmve/mveplay.c, main/movie.c: added function
	to disable/enable audio
	* libmve/: mve_main.c, mveplay.c: bigendian fixes
	* main/: movie.h, titles.c: make sure movie's palette is set before
	writing briefing text.	Fixes bug #359
	* libmve/mveplay.c: make MVE_rmStepMovie play a full frame instead
	of a chunk
	* misc/: args.c, byteswap.c, d_delay.c, d_io.c, dos_disk.h,
	error.c, hash.c, parsarg.c, parsarg.h, strio.c, strutil.c:
	formatting
	* maths/: fix.asm, rand.c, tables.c, vecmat.c, vecmata.asm:
	formatting
	* texmap/: ntmap.c, scanline.c, scanline.h, texmapl.h,
	tmap_flt.asm, tmap_inc.asm, tmap_lin.asm, tmap_ll.asm,
	tmap_per.asm, tmapfade.asm, tmapflat.c, tmappent.S, tmapppro.S:
	formatting
	* include/libmve.h: blah

2003-02-18  Martin Schaffner <martin.schaffner@epfl.ch>

	* main/render.c: 2nd attempt to fix solaris qsort bug

2003-02-18  Bradley Bell <btb@icculus.org>
